--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,4 +482,40 @@ pre code { font-size: 15px !important; }
 
 p code { font-size: 19px; }
 
+html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #183458 !important; }
+
+a { color: white !important; }
+
+a:hover { color: rgba(255, 255, 255, 0.87) !important; }
+
+.site-title, .site-title:visited, .site-nav, .page-link { color: rgba(255, 255, 255, 0.87) !important; }
+
+.site-nav { background-color: #183458; border-color: #38506f; }
+
+* { scrollbar-color: #183458 #38506f; }
+
+pre, code { border-color: #38506f; background-color: #243e60; }
+
+.page-description { color: rgba(255, 255, 255, 0.69); }
+
+.post-meta { color: rgba(255, 255, 255, 0.38); }
+
+.post-content p, .post-content li { color: rgba(255, 255, 255, 0.69); }
+
+.btn { background-color: #243e60 !important; color: rgba(255, 255, 255, 0.87) !important; border-color: #38506f !important; }
+
+.btn:hover { background-color: #183458 !important; }
+
+table th { background-color: #243e60; border-color: #38506f; color: rgba(255, 255, 255, 0.87); }
+
+table td { background-color: #183458; border-color: #38506f; color: rgba(255, 255, 255, 0.69); }
+
+.flash { color: #183458 !important; filter: brightness(80%); }
+
+canvas { filter: invert(100%); }
+
+.post-list > li > div { box-shadow: none !important; background-color: #243e60; border: none !important; }
+
+li .post-meta-description { color: rgba(255, 255, 255, 0.69) !important; }
+
 /*# sourceMappingURL=style.css.map */
