--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,7 +482,7 @@ pre code { font-size: 15px !important; }
 
 p code { font-size: 19px; }
 
-html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #4d2d4d !important; }
+html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #4388af !important; }
 
 a { color: white !important; }
 
@@ -490,11 +490,11 @@ a:hover { color: rgba(255, 255, 255, 0.87) !important; }
 
 .site-title, .site-title:visited, .site-nav, .page-link { color: rgba(255, 255, 255, 0.87) !important; }
 
-.site-nav { background-color: #4d2d4d; border-color: #664a66; }
+.site-nav { background-color: #4388af; border-color: #5d99ba; }
 
-* { scrollbar-color: #4d2d4d #664a66; }
+* { scrollbar-color: #4388af #5d99ba; }
 
-pre, code { border-color: #664a66; background-color: #563856; }
+pre, code { border-color: #5d99ba; background-color: #4c8eb3; }
 
 .page-description { color: rgba(255, 255, 255, 0.69); }
 
@@ -502,19 +502,19 @@ pre, code { border-color: #664a66; background-color: #563856; }
 
 .post-content p, .post-content li { color: rgba(255, 255, 255, 0.69); }
 
-.btn { background-color: #563856 !important; color: rgba(255, 255, 255, 0.87) !important; border-color: #664a66 !important; }
+.btn { background-color: #4c8eb3 !important; color: rgba(255, 255, 255, 0.87) !important; border-color: #5d99ba !important; }
 
-.btn:hover { background-color: #4d2d4d !important; }
+.btn:hover { background-color: #4388af !important; }
 
-table th { background-color: #563856; border-color: #664a66; color: rgba(255, 255, 255, 0.87); }
+table th { background-color: #4c8eb3; border-color: #5d99ba; color: rgba(255, 255, 255, 0.87); }
 
-table td { background-color: #4d2d4d; border-color: #664a66; color: rgba(255, 255, 255, 0.69); }
+table td { background-color: #4388af; border-color: #5d99ba; color: rgba(255, 255, 255, 0.69); }
 
-.flash { color: #4d2d4d !important; filter: brightness(80%); }
+.flash { color: #4388af !important; filter: brightness(80%); }
 
 canvas { filter: invert(100%); }
 
-.post-list > li > div { box-shadow: none !important; background-color: #563856; border: none !important; }
+.post-list > li > div { box-shadow: none !important; background-color: #4c8eb3; border: none !important; }
 
 li .post-meta-description { color: rgba(255, 255, 255, 0.69) !important; }
 
