--- a/_sass/minima/fastpages-styles.scss
+++ b/_sass/minima/fastpages-styles.scss
@@ -18,7 +18,7 @@ img.emoji{
   text-align: center;
   font-size: .8rem;
   font-style: italic;
-  color: orange;
+  color: rgb(84, 77, 64);
 }
 
 .page-content {
@@ -76,7 +76,7 @@ li {
   margin-bottom:.05rem !important;
   }
   .post-meta-description {
-    color: rgb(242, 143, 30);
+    color: rgb(80, 72, 63);
     font-size: 15px;
     margin-top:.05rem !important;
     margin-bottom:.05rem !important;
@@ -213,10 +213,10 @@ table {
 }
 ::-webkit-scrollbar-thumb {
   height: 6px;
-  border: 4px solid rgb(241, 149, 35);
+  border: 4px solid rgb(75, 69, 62);
   background-clip: padding-box;
   -webkit-border-radius: 7px;
-  background-color: #faa92f;
+  background-color: #403d38;
   -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
 }
 ::-webkit-scrollbar-button {
